--- a/Styles/_favoritos.scss
+++ b/Styles/_favoritos.scss
@@ -1,4 +1,5 @@
 #sectionFavoritos{
+    margin-top: 1.333333333vw;
     #corFavPrin{
         margin-left: 50vw;
         transform: translateX(-50%);
