--- a/Styles/_misGifos.scss
+++ b/Styles/_misGifos.scss
@@ -1,4 +1,5 @@
 #sectionMisGifos{
+    margin-top: 1.333333333vw;
     #icon_MisGifos{
         margin-left: 50vw;
         transform: translateX(-50%);
