--- a/Styles/_busqueda.scss
+++ b/Styles/_busqueda.scss
@@ -24,9 +24,11 @@
         margin: 0 5.6vw 0 5.6vw;
         grid-gap: 5.6vw;
         margin-bottom: 20.8vw;
-        img{
-            width: 41.6vw;
-            height: 32vw;
+        .divHoverContenedor{
+            img{
+                width: 41.6vw;
+                height: 32vw;
+            }
         }
     }
     #btnVerMas{
@@ -34,4 +36,9 @@
         height: 13.3333333vw;
         margin-left: 33.066666vw;
     }
+}
+
+.divHover:hover{
+    background-color: #572EE5;
+    z-index: 3;
 }
