--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ body {
 }
 
 #buscadorGifos #searchBar #barraContenedor #barra #buscarYMas {
+  font-family: "Roboto", sans-serif;
   padding: 0;
   margin-left: 14.66666vw;
   margin-right: 6.4vw;
@@ -308,14 +309,40 @@ body {
   height: 5.336vw;
 }
 
+#buscadorGifos #searchBar #barraContenedor #barra #cruzAparece {
+  display: none;
+}
+
 #buscadorGifos #searchBar #barraContenedor #separadorBusqueda {
-  border: 1px solid #9cafc3;
+  border-top: 1px solid #9cafc3;
   width: 80%;
   display: none;
 }
 
 #buscadorGifos #searchBar #barraContenedor #sugerenciasBusqueda {
   display: none;
+  width: 100%;
+}
+
+#buscadorGifos #searchBar #barraContenedor #sugerenciasBusqueda .itemListaSugerido {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#buscadorGifos #searchBar #barraContenedor #sugerenciasBusqueda .itemListaSugerido img {
+  width: 15.8px;
+  height: 15.8px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 1.638888888vw;
+}
+
+#buscadorGifos #searchBar #barraContenedor #sugerenciasBusqueda .itemListaSugerido a p {
+  font-family: "Roboto", sans-serif;
+  margin: 0 0 0 1.013888888vw;
+  color: #9CAFC3;
 }
 
 #buscadorGifos #etiquetasInicio {
@@ -337,6 +364,7 @@ body {
   font-weight: 500;
   font-size: 3.142vw;
   line-height: 6.8vw;
+  text-transform: capitalize;
 }
 
 @media only screen and (min-width: 800px) {
@@ -481,8 +509,9 @@ body {
     display: block;
   }
   #buscadorGifos #searchBar #barraContenedor {
+    position: relative;
     border: 1px solid #572ee5;
-    border-radius: 100vw;
+    border-radius: 3vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -511,7 +540,7 @@ body {
     margin-left: 3.75vw;
     margin-right: 6.4vw;
     color: #6b7989;
-    width: 57.3333333vw;
+    width: 80%;
     font-size: 1vw;
     line-height: 1vw;
     border: none;
@@ -609,20 +638,13 @@ body {
   overflow: scroll;
   margin-bottom: 21.8666666vw;
   height: 49.866667vw;
+  margin-left: 5.86666666vw;
 }
 
 #trendingGifos #carrusel #carruselTrendingGifos img {
   width: 64.8vw;
   height: 49.866667vw;
   margin: 0 2.9333333vw 0 2.9333333vw;
-}
-
-#trendingGifos #carrusel #carruselTrendingGifos #imagenCarrusel1 {
-  margin-left: 5.86666666vw;
-}
-
-#trendingGifos #carrusel #carruselTrendingGifos #imagenCarrusel3 {
-  margin-right: 11.733333vw;
 }
 
 #trendingGifos #flechaDerecha {
@@ -800,9 +822,26 @@ body {
   margin-bottom: 20.8vw;
 }
 
-#busqueda #galeria .divHoverContenedor img {
+#busqueda #galeria .divHoverContenedor {
+  position: relative;
+}
+
+#busqueda #galeria .divHoverContenedor .divHover {
   width: 41.6vw;
   height: 32vw;
+  background-color: rgba(87, 46, 229, 0.8);
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+#busqueda #galeria .divHoverContenedor .imgBuscada {
+  width: 41.6vw;
+  height: 32vw;
+  display: block;
+  z-index: 0;
 }
 
 #busqueda #btnVerMas {
@@ -811,9 +850,8 @@ body {
   margin-left: 33.066666vw;
 }
 
-.divHover:hover {
-  background-color: #572EE5;
-  z-index: 3;
+.imgBuscada:hover ~ .divHover {
+  display: block;
 }
 
 #infoFooter {
@@ -1063,5 +1101,118 @@ body {
   height: 13.3333333vw;
   margin-left: 33.066666vw;
   margin-bottom: 20.8vw;
+}
+
+#sectionImagenAmplificada {
+  display: none;
+  position: absolute;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 15.73333333vw 7.4666666vw 33.6vw  7.733333vw;
+}
+
+#sectionImagenAmplificada #cruzImgAmplificada {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 6.4vw;
+  margin-bottom: 20.8vw;
+}
+
+#sectionImagenAmplificada #cruzImgAmplificada #cruzImgAmplificadaBtn {
+  height: 3.73333vw;
+  width: 3.68vw;
+  padding: 1.333333vw;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #imgAmplificada {
+  width: 84.8vw;
+  height: 65.333333vw;
+  margin-bottom: 3.733333vw;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #infoUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #infoUsuario #nombreUsuario {
+  margin-bottom: 1.6vw;
+  margin-top: 0;
+  margin-left: 1.6vw;
+  font-size: 3.3vw;
+  line-height: 4.8vw;
+  font-family: "Roboto", sans-serif;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #infoUsuario #tituloGif {
+  margin: 0;
+  font-size: 3.5vw;
+  font-family: "Montserrat", sans-serif;
+  line-height: 5.2vw;
+  font-weight: bold;
+  margin-left: 0.13333333vw;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #botonesImgAmpliada {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 30%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #botonesImgAmpliada img {
+  width: 9.06666666vw;
+  height: 9.06666666vw;
+}
+
+#sectionImagenAmplificada #imgAmplificadaCtn #pieDeImg #botonesImgAmpliada #btnDescargarImgAmpliada {
+  border-radius: 1vw;
+  border: 1px solid rgba(156, 175, 195, 0.5);
+  margin-left: 7.7333333vw;
 }
 /*# sourceMappingURL=style.css.map */
