--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ body {
 #buscadorGifos #searchBar #barraContenedor #sugerenciasBusqueda .itemListaSugerido a p {
   font-family: "Roboto", sans-serif;
   margin: 0 0 0 1.013888888vw;
-  color: #9CAFC3;
+  color: #9cafc3;
 }
 
 #buscadorGifos #etiquetasInicio {
@@ -361,6 +361,19 @@ body {
 
 #buscadorGifos #etiquetasInicio #etiquetasEjemplos {
   margin: 0 20vw 0 20vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+
+#buscadorGifos #etiquetasInicio #etiquetasEjemplos #etiquetasEjemplosTexto {
+  margin-right: 1vw;
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 500;
   font-size: 3.142vw;
   line-height: 6.8vw;
