--- a/Styles/_navbar.scss
+++ b/Styles/_navbar.scss
@@ -65,7 +65,6 @@
   }
 }
 
-
 //navBar Tablet:
 @media only screen and (min-width: 800px) {
   #header {
@@ -120,7 +119,7 @@
             transform: translateX(-50%);
           }
           .liNavItem {
-            color: #572EE5;
+            color: #572ee5;
             font-size: 1.3vw;
             line-height: 1.6vw;
             text-decoration: none;
@@ -140,8 +139,6 @@
   }
 }
 
-
-
 //navBar Desktop:
 @media only screen and (min-width: 1440px) {
   #header {
@@ -154,6 +151,8 @@
       border-top: 0.347439371vw solid #572ee5;
       margin-top: 0;
       #logo {
+        width: 4.10416666vw;
+        height: 4.10416666vw;
         float: left;
         margin: 1.59722vw 0 0.89583333vw 10.83333333vw;
       }
@@ -176,7 +175,7 @@
         background-color: rgba(255, 255, 255, 0.5);
         display: flex;
         justify-content: space-between;
-        align-items:center;
+        align-items: center;
         margin: 0;
         li {
           position: relative;
@@ -196,7 +195,7 @@
             transform: translateX(-50%);
           }
           .liNavItem {
-            color: #572EE5;
+            color: #572ee5;
             font-size: 0.72222vw;
             line-height: 1vw;
             text-decoration: none;
