--- a/Styles/_busqueda.scss
+++ b/Styles/_busqueda.scss
@@ -1,56 +1,130 @@
-#busqueda{
-    margin-bottom: 21.06666666vw;
-    #separador{
-        width: 41.8666666vw;
-        border: #9CAFC3 1px solid;
-        margin-left: 29.0666666vw;
-        opacity: 50%;
-        margin-bottom: 11.46666666vw;
+//busqueda Mobile:
+#busqueda {
+  margin-bottom: 21.06666666vw;
+  #separador {
+    width: 41.8666666vw;
+    border: #9cafc3 1px solid;
+    margin-left: 29.0666666vw;
+    opacity: 50%;
+    margin-bottom: 11.46666666vw;
+  }
+  #tituloBusqueda {
+    color: #572ee5;
+    font-size: 4.3vw;
+    margin-top: 0;
+    margin-bottom: 10.133333vw;
+    font-weight: bold;
+    line-height: 10.666666666vw;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+  }
+  #galeria {
+    display: grid;
+    grid-template-columns: 41.6vw 41.6vw;
+    grid-template-rows: 32vw 32vw 32vw 32vw 32vw 32vw;
+    margin: 0 5.6vw 0 5.6vw;
+    grid-gap: 5.6vw;
+    margin-bottom: 20.8vw;
+    .divHoverContenedor {
+      position: relative;
+      .divHover {
+        width: 41.6vw;
+        height: 32vw;
+        background-color: rgba(87, 46, 229, 0.8);
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+      }
+      .imgBuscada {
+        width: 41.6vw;
+        height: 32vw;
+        display: block;
+        z-index: 0;
+      }
     }
-    #tituloBusqueda{
-        color: #572ee5;
-        font-size: 4.3vw;
-        margin-top: 0;
-        margin-bottom: 10.133333vw;
-        font-weight: bold;
-        line-height: 10.666666666vw;
-        font-family: "Montserrat", sans-serif;
-        text-align: center;
-    }
-    #galeria{
-        display: grid;
-        grid-template-columns:41.6vw 41.6vw;
-        grid-template-rows: 32vw 32vw 32vw 32vw 32vw 32vw;
-        margin: 0 5.6vw 0 5.6vw;
-        grid-gap: 5.6vw;
-        margin-bottom: 20.8vw;
-        .divHoverContenedor{
-            position: relative;
-            .divHover{
-                width: 41.6vw;
-                height: 32vw;
-                background-color: rgba(87, 46, 229, 0.8);
-                display: none;
-                position:absolute;
-                top: 0;
-                left: 0;
-                z-index: 10;
-            }
-            .imgBuscada{
-                width: 41.6vw;
-                height: 32vw;
-                display: block;
-                z-index: 0;
-            }
-        }
-    }
-    #btnVerMas{
-        width: 33.8666666vw;
-        height: 13.3333333vw;
-        margin-left: 33.066666vw;
-    }
+  }
+  #btnVerMas {
+    width: 33.8666666vw;
+    height: 13.3333333vw;
+    margin-left: 33.066666vw;
+  }
 }
 
-.imgBuscada:hover ~ .divHover{
-    display: block;
+.imgBuscada:hover ~ .divHover {
+  display: block;
+}
+//Busqueda Desktop:
+@media only screen and (min-width: 1440px) {
+  #busqueda {
+    margin-bottom: 5.486111111vw;
+    #separador {
+      width: 23.4722222vw;
+      border: #9cafc3 1px solid;
+      margin-left: 38.2638888vw;
+      opacity: 50%;
+      margin-bottom: 5.6875vw;
+    }
+    #tituloBusqueda {
+      color: #572ee5;
+      font-size: 2.430555vw;
+      margin-top: 0;
+      margin-bottom: 4.09722222vw;
+      font-weight: bold;
+      line-height: 2.1vw;
+      font-family: "Montserrat", sans-serif;
+      text-align: center;
+    }
+    #galeria {
+      display: grid;
+      grid-template-columns: 18.0555555vw 18.0555555vw 18.0555555vw 18.0555555vw;
+      grid-template-rows: 13.888888vw 13.888888vw 13.888888vw;
+      margin: 0 10.90277777vw 5.416666666vw 10.83333vw;
+      grid-gap: 2.013888vw;
+      .divHoverContenedor {
+        position: relative;
+        .divHover {
+          width: 18.0555555vw;
+          height: 13.888888vw;
+          background-color: rgba(87, 46, 229, 0.8);
+          display: none;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 10;
+          #btnsPintadosDesktop {
+            margin-left: 9.2361111111vw;
+            margin-top: 0.6944444vw;
+            margin-right: 0.6944444vw;
+            #btnFavPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+            }
+            #btnDescargarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+            #btnAmpliarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+          }
+        }
+        .imgBuscada {
+          width: 18.0555555vw;
+          height: 13.888888vw;
+          display: block;
+          z-index: 0;
+        }
+      }
+    }
+    #btnVerMas {
+      width: 8.81944444vw;
+      height: 3.47222222vw;
+      margin-left: 45.625vw;
+    }
+  }
 }
