--- a/Styles/_misGifos.scss
+++ b/Styles/_misGifos.scss
@@ -1,35 +1,84 @@
-#sectionMisGifos{
-    margin-top: 1.333333333vw;
-    #icon_MisGifos{
-        margin-left: 50vw;
-        transform: translateX(-50%);
-        margin-bottom: 1.6vw;
+//Mis Gifos Mobile:
+#sectionMisGifos {
+  margin-top: 1.333333333vw;
+  #icon_MisGifos {
+    margin-left: 50vw;
+    transform: translateX(-50%);
+    margin-bottom: 1.6vw;
+  }
+  #tituloMisGifos {
+    color: #572ee5;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 4.3vw;
+    line-height: 7.8vw;
+    text-align: center;
+    margin-bottom: 12.2666666vw;
+  }
+  #galeriaMisGifos {
+    display: grid;
+    grid-template-columns: 41.6vw 41.6vw;
+    grid-template-rows: 32vw 32vw 32vw 32vw;
+    margin: 0 5.6vw 0 5.6vw;
+    grid-gap: 5.6vw;
+    margin-bottom: 20.8vw;
+    img {
+      width: 41.6vw;
+      height: 32vw;
     }
-    #tituloMisGifos{
-        color: #572EE5;
-        font-family: "Montserrat", sans-serif;
-        font-weight: bold;
-        font-size: 4.3vw;
-        line-height: 7.8vw;
-        text-align: center;
-        margin-bottom: 12.2666666vw;
+  }
+  #btnVerMasMisGifos {
+    width: 33.8666666vw;
+    height: 13.3333333vw;
+    margin-left: 33.066666vw;
+    margin-bottom: 20.8vw;
+  }
+}
+
+//Mis Gifos Desktop:
+@media only screen and (min-width: 1440px) {
+  #sectionMisGifos {
+    margin-bottom: 5.486111111vw;
+    #tituloMisGifos {
+      color: #572ee5;
+      font-size: 2.430555vw;
+      margin-top: 0;
+      margin-bottom: 4.09722222vw;
+      font-weight: bold;
+      line-height: 2.1vw;
+      font-family: "Montserrat", sans-serif;
+      text-align: center;
     }
-    #galeriaMisGifos{
-        display: grid;
-        grid-template-columns:41.6vw 41.6vw;
-        grid-template-rows: 32vw 32vw 32vw 32vw;
-        margin: 0 5.6vw 0 5.6vw;
-        grid-gap: 5.6vw;
-        margin-bottom: 20.8vw;
-        img{
-            width: 41.6vw;
-            height: 32vw;
+    #galeriaMisGifos {
+      display: grid;
+      grid-template-columns: 18.0555555vw 18.0555555vw 18.0555555vw 18.0555555vw;
+      grid-template-rows: 13.888888vw 13.888888vw 13.888888vw;
+      margin: 0 10.90277777vw 5.416666666vw 10.83333vw;
+      grid-gap: 2.013888vw;
+      .divHoverContenedor {
+        position: relative;
+        .divHover {
+          width: 18.0555555vw;
+          height: 13.888888vw;
+          background-color: rgba(87, 46, 229, 0.8);
+          display: none;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 10;
         }
+        .imgBuscada {
+          width: 18.0555555vw;
+          height: 13.888888vw;
+          display: block;
+          z-index: 0;
+        }
+      }
     }
-    #btnVerMasMisGifos{
-        width: 33.8666666vw;
-        height: 13.3333333vw;
-        margin-left: 33.066666vw;
-        margin-bottom: 20.8vw;
+    #btnVerMasMisGifos {
+      width: 8.81944444vw;
+      height: 3.47222222vw;
+      margin-left: 45.625vw;
     }
+  }
 }
